GNOME Bugzilla – Bug 753733
Canonicalization test failed
Last modified: 2015-08-18 09:35:50 UTC
./test-canonicalization ../../../../panels/printers/canonicalization-test.txt > /dev/null (process:27856): printers-cc-panel-ERROR **: Result for ('', 'Canon BJ-30 - CUPS+Gutenprint v5.2.9 Simplified', '', '') doesn't match 'Canon-BJ-30-3' (got: 'Canon-BJ-30')
Created attachment 309441 [details] [review] Fix canonicalization test Thank you for catching this. Attached is a patch fixing this bug.
Review of attachment 309441 [details] [review]: If the tests pass, looks fine.
Comment on attachment 309441 [details] [review] Fix canonicalization test (In reply to Bastien Nocera from comment #2) > Review of attachment 309441 [details] [review] [review]: > > If the tests pass, looks fine. Thank you for the review. Yes, the test passes with the patch. I've pushed it to master.