printers: Fix canonicalization test

Function canonicalize_device_name() has been changed recently,
it takes a GList of strings as its first parameter now.

https://bugzilla.gnome.org/show_bug.cgi?id=753733